--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
 
 install:
-  - pip install -r requirements.txt
+  - pip install -r requirements/prod.txt
 
 script:
   - noscript
